Don't mutate the attributes object, and other fixes in pug blocks #1

--- a/source/blocks/button-info/button-info.pug
+++ b/source/blocks/button-info/button-info.pug
@@ -1,4 +1,4 @@
-mixin button-info({ infoText='' })
+mixin button-info({ infoText = '' } = {})
   -
     const blockName = 'button-info';
     const wrapperClass = [blockName];
