--- a/source/blocks/button/button.pug
+++ b/source/blocks/button/button.pug
@@ -1,21 +1,17 @@
-mixin button({ btnType='button', btnText='', withArrow=false, btnStyle })
+mixin button({ btnType = 'button', btnText = '', withArrow = false, btnStyle } = {})
   -
     const blockName = 'button';
-    attributes.class = [blockName];
+    const blockAttributes = {
+      type: btnType === 'link' ? undefined : btnType,
+      class: [blockName],
+    };
     const iconClass = ['material-icons', `${blockName}__arrow`];
-    let btnTag;
+    const btnTag = btnType === 'link' ? 'a' : 'button';
 
   if (btnStyle)
     each style in btnStyle.split(' ')
-      - attributes.class.push(`${blockName}_${style}`)
+      - blockAttributes.class.push(`${blockName}_${style}`)
 
-  case btnType
-    when 'link'
-      - btnTag = 'a'
-    default
-      - btnTag = 'button'
-      - attributes.type = btnType
-
-  #{btnTag}&attributes(attributes) #{btnText}
+  #{btnTag}&attributes(Object.assign({}, attributes, blockAttributes)) #{btnText}
     if (withArrow)
       i(class=iconClass) arrow_forward
