--- a/source/blocks/card-book/card-book.pug
+++ b/source/blocks/card-book/card-book.pug
@@ -3,7 +3,7 @@ include ../dropdown-list/dropdown-list.pug
 include ../button/button.pug
 include ../button-info/button-info.pug
 
-mixin card-book(options)
+mixin card-book(options = {})
   -
     const {
       roomNumber = 0,
