--- a/source/blocks/card-calendar/card-calendar.pug
+++ b/source/blocks/card-calendar/card-calendar.pug
@@ -1,4 +1,4 @@
-mixin card-calendar({ startAt, endAt, todayDate })
+mixin card-calendar({ startAt, endAt, todayDate } = {})
   -
     const blockName = 'card-calendar';
     const wrapperClass = [blockName, `js-${blockName}`];
