--- a/source/blocks/card-room/card-room.pug
+++ b/source/blocks/card-room/card-room.pug
@@ -1,7 +1,7 @@
 include ../carousel/carousel.pug
 include ../rating/rating.pug
 
-mixin card-room(options)
+mixin card-room(options = {})
   -
     const {
       roomHref = '#mock-address',
