--- a/source/blocks/carousel/carousel.pug
+++ b/source/blocks/carousel/carousel.pug
@@ -1,4 +1,4 @@
-mixin carousel({ imgSrcList=[] })
+mixin carousel({ imgSrcList = [] } = {})
   -
     const blockName = 'carousel';
     const wrapperClass = [blockName, `js-${blockName}`];
