--- a/source/blocks/chart-circle/chart-circle.pug
+++ b/source/blocks/chart-circle/chart-circle.pug
@@ -1,4 +1,4 @@
-mixin chart-circle({ chartWeight=1, chartValues=[], chartTitles=[], total={}, legendShow=true })
+mixin chart-circle({ chartWeight = 1, chartValues = [], chartTitles = [], total = {}, legendShow = true } = {})
   -
     const blockName = 'chart-circle';
     const wrapperClass = [blockName, `js-${blockName}`];
