--- a/source/blocks/comment/comment.pug
+++ b/source/blocks/comment/comment.pug
@@ -1,6 +1,6 @@
 include ../button-like/button-like.pug
 
-mixin comment(options)
+mixin comment(options = {})
   -
     const {
       userName = '',
