--- a/source/blocks/list-checkbox/list-checkbox.pug
+++ b/source/blocks/list-checkbox/list-checkbox.pug
@@ -1,6 +1,6 @@
 include ../input-checkbox/input-checkbox.pug
 
-mixin list-checkbox({ listItems=[], listTitle='', expandable=false, active=false })
+mixin list-checkbox({ listItems = [], listTitle = '', expandable = false, active = false } = {})
   -
     const blockName = 'list-checkbox';
     const wrapperClass = [blockName];
