--- a/source/blocks/list-feature/list-feature.pug
+++ b/source/blocks/list-feature/list-feature.pug
@@ -1,4 +1,4 @@
-mixin list-feature({ listItems=[] })
+mixin list-feature({ listItems = [] } = {})
   -
     const blockName = 'list-feature';
     const wrapperClass = [blockName];
