--- a/source/blocks/list-radio/list-radio.pug
+++ b/source/blocks/list-radio/list-radio.pug
@@ -1,6 +1,6 @@
 include ../input-radio/input-radio.pug
 
-mixin list-radio({ radioName='default', listItems=[], listTitle })
+mixin list-radio({ radioName = 'default', listItems = [], listTitle } = {})
   -
     const blockName = 'list-radio';
     const wrapperClass = [blockName];
