--- a/source/blocks/dropdown-date/dropdown-date.pug
+++ b/source/blocks/dropdown-date/dropdown-date.pug
@@ -1,20 +1,14 @@
 include ../input-field/input-field.pug
 
-mixin dropdown-date({ labelTexts, inpNames, startAt, endAt, minDate, active = false } = {})
+mixin dropdown-date({ labelTexts = [], inpNames = [], startAt, endAt, minDate, active = false } = {})
   -
     const blockName = 'dropdown-date';
+    const isDoubleInput = inpNames.length > 1;
     const wrapperClass = [blockName, `js-${blockName}`];
-    const inputClass = [`${blockName}__input`, `js-${blockName}__input`];
+    const inputClass = [`${blockName}__input`, `js-${blockName}__input`, isDoubleInput && `${blockName}__input_small`];
     const secInputClass = [`${blockName}__input`, `js-${blockName}__input-sec`, `${blockName}__input_small`];
     const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`];
-    let inpPlaceholder = 'ДД.ММ \u2013 ДД.ММ';
-
-  if (inpNames.length > 1)
-    - inputClass.push(`${blockName}__input_small`)
-    - inpPlaceholder = 'ДД.ММ.ГГГГ'
-
-  if (!labelTexts[1])
-    - labelTexts[1] = labelTexts[0]
+    const inpPlaceholder = isDoubleInput ? 'ДД.ММ.ГГГГ' : 'ДД.ММ \u2013 ДД.ММ';
 
   div(
     class=wrapperClass,
@@ -27,7 +21,7 @@ mixin dropdown-date({ labelTexts, inpNames, startAt, endAt, minDate, active = fa
       div(class=inputClass)
         +input-field({labelText: labelTexts[0]})(name=inpNames[0], placeholder=inpPlaceholder, readonly)
         i(class=iconClass) expand_more
-      if (inpNames.length > 1)
+      if (isDoubleInput)
         div(class=secInputClass)
-          +input-field({labelText: labelTexts[1]})(name=inpNames[1], placeholder=inpPlaceholder, readonly)
+          +input-field({labelText: labelTexts[1] || labelTexts[0]})(name=inpNames[1], placeholder=inpPlaceholder, readonly)
           i(class=iconClass) expand_more
