--- a/source/blocks/rating/rating.pug
+++ b/source/blocks/rating/rating.pug
@@ -3,10 +3,9 @@ mixin rating({ value = 0 } = {})
     const blockName = 'rating';
     const wrapperClass = [blockName, `js-${blockName}`];
     const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`];
-    let icon;
 
   span(class=wrapperClass, title=`${value}`)
     - for (let i = 0, j = value; i < 5; i++, j--) {
-        - icon = j > 0 ? 'star' : 'star_border';
+        - const icon = j > 0 ? 'star' : 'star_border';
         i(class=iconClass) #{icon}
     - }
